<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/editar_contato"
            style="@style/ToolbarTitle"/>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_editar_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nome_contato"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefone"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            android:layout_below="@+id/nome">

            <EditText
                android:id="@+id/et_editar_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/telefone_contato"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/celular"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            android:layout_below="@+id/telefone">

            <EditText
                android:id="@+id/et_editar_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/celular_contato"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aniversario"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            android:layout_below="@+id/celular">

            <EditText
                android:id="@+id/et_editar_aniversario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/aniversario_contato"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filiacao"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            android:layout_below="@+id/aniversario">

            <EditText
                android:id="@+id/et_editar_filiacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/filiacao_contato"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/salvar"
        android:background="@drawable/btn_salvar"/>

</RelativeLayout>