<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:queryHint="@string/queryHint"
        app:defaultQueryHint="@string/queryHint"
        android:background="@drawable/bg_searchview"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"/>

    <View
        android:layout_marginTop="20dp"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/searchview"/>

    <TextView
        android:id="@+id/tv_todos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/contatos"
        android:textStyle="normal"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/divider"/>

    <TextView
        android:id="@+id/tv_sem_contatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/sem_contatos"
        android:layout_below="@id/tv_todos"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_todos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_todos"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        android:src="@drawable/ic_add"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>